--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -73,6 +73,9 @@
                                                 <state key="normal" title="Sign Up">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="signUpPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Puh-qL-zI1"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -112,10 +115,10 @@
             </objects>
             <point key="canvasLocation" x="24.800000000000001" y="34.632683658170919"/>
         </scene>
-        <!--List View-->
+        <!--List-->
         <scene sceneID="Hx4-3m-Lbo">
             <objects>
-                <viewController id="WgV-Gr-jhb" sceneMemberID="viewController">
+                <viewController id="WgV-Gr-jhb" customClass="ListVC" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="TEi-vf-Ccx"/>
                         <viewControllerLayoutGuide type="bottom" id="EYf-vv-szQ"/>
@@ -125,16 +128,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="List View" image="icon_listview-selected" selectedImage="icon_listview-selected" id="z5S-yI-rCJ"/>
+                    <tabBarItem key="tabBarItem" title="List" image="icon_listview-selected" selectedImage="icon_listview-selected" id="z5S-yI-rCJ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D6g-rg-qbi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1647" y="363"/>
+            <point key="canvasLocation" x="2270" y="369"/>
         </scene>
-        <!--Map View-->
+        <!--Navigation Controller-->
+        <scene sceneID="a1p-Ol-vwL">
+            <objects>
+                <navigationController storyboardIdentifier="MainNavigationController" id="FRL-oz-aQP" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rs3-tP-IWP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ckt-Hb-FM1" kind="relationship" relationship="rootViewController" id="0JL-mA-ZdD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T07-xZ-RFi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="758" y="35"/>
+        </scene>
+        <!--Map-->
         <scene sceneID="MGV-Zw-eD4">
             <objects>
-                <viewController id="cFd-rl-pWJ" sceneMemberID="viewController">
+                <viewController id="cFd-rl-pWJ" customClass="MapVC" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LBX-C8-bGt"/>
                         <viewControllerLayoutGuide type="bottom" id="dkH-8l-rh1"/>
@@ -142,18 +161,33 @@
                     <view key="view" contentMode="scaleToFill" id="we3-iS-ftL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ArM-hn-1k3">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ArM-hn-1k3" secondAttribute="trailing" id="F3P-k9-LlY"/>
+                            <constraint firstItem="ArM-hn-1k3" firstAttribute="top" secondItem="LBX-C8-bGt" secondAttribute="bottom" id="MvV-JZ-O6B"/>
+                            <constraint firstItem="dkH-8l-rh1" firstAttribute="top" secondItem="ArM-hn-1k3" secondAttribute="bottom" id="b1d-cW-ffH"/>
+                            <constraint firstItem="ArM-hn-1k3" firstAttribute="leading" secondItem="we3-iS-ftL" secondAttribute="leading" id="gH1-eP-76P"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map View" image="icon_mapview-selected" selectedImage="icon_mapview-selected" id="wRu-s8-lkq"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="icon_mapview-selected" selectedImage="icon_mapview-selected" id="wRu-s8-lkq"/>
+                    <connections>
+                        <outlet property="mapView" destination="ArM-hn-1k3" id="YZt-ID-ZEG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bsY-Y5-yMC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1647" y="-292"/>
+            <point key="canvasLocation" x="2269.5999999999999" y="-308.09595202398805"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--On The Map-->
         <scene sceneID="gQ8-uG-n4P">
             <objects>
                 <tabBarController storyboardIdentifier="MainTabBarController" id="ckt-Hb-FM1" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="On The Map" id="LRR-tf-MyQ"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="F7E-G6-Va7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -166,7 +200,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mo6-2g-77D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="694" y="36"/>
+            <point key="canvasLocation" x="1522" y="35"/>
         </scene>
     </scenes>
     <resources>
